Header: Adding Articles in NavLink + MultiLang

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,10 +1,12 @@
-{  "common": {
+{
+  "common": {
     "language": "العربية",
     "switchLanguage": "English",
     "home": "الرئيسية",
     "magazine": "المجلة",
     "dawah": "الدعوة",
     "library": "المكتبة",
+    "articles": "المقالات",
     "contact": "اتصل بنا",
     "readMore": "اقرأ المزيد",
     "view": "عرض",
@@ -14,7 +16,8 @@
     "share": "مشاركة",
     "items": "عنصر",
     "loading": "جاري التحميل...",
-    "sending": "جاري الإرسال...",    "madeWith": "صُنع بكل حب",
+    "sending": "جاري الإرسال...",
+    "madeWith": "صُنع بكل حب",
     "by": "بواسطة",
     "goToLibrary": "الذهاب إلى المكتبة",
     "siteName": "حُراس الثغور"
@@ -46,7 +49,7 @@
     "loading": "جاري التحميل...",
     "error": "خطأ في تحميل الملف",
     "search": "البحث في المستند",
-    "thumbnails": "الصور المصغرة",    
+    "thumbnails": "الصور المصغرة",
     "fullscreen": "ملء الشاشة",
     "fitWidth": "ملائمة العرض",
     "fitPage": "ملائمة الصفحة",
@@ -56,22 +59,22 @@
     "facing": "صفحات متقابلة",
     "issues": {
       "issue1": {
-      "title": "ليسوا قرآنيين: الفطرة والميثاق",
-      "description": "استكشاف مفهوم الفطرة والميثاق والمفهوم المقيد للعبادة في الفكر الإسلامي",
-      "date": "2025",
-      "author": "قسم اللاهوت الإسلامي"
+        "title": "ليسوا قرآنيين: الفطرة والميثاق",
+        "description": "استكشاف مفهوم الفطرة والميثاق والمفهوم المقيد للعبادة في الفكر الإسلامي",
+        "date": "2025",
+        "author": "قسم اللاهوت الإسلامي"
       },
       "issue2": {
-      "title": "توحيد الألوهية وضعف الملكة اللغوية",
-      "description": "دراسة حول عقيدة توحيد الألوهية وأثر ضعف الملكة اللغوية في الإنكار على ما ليس حقه الإنكار",
-      "date": "2025",
-      "author": "د. عبد الله اللغوي"
+        "title": "توحيد الألوهية وضعف الملكة اللغوية",
+        "description": "دراسة حول عقيدة توحيد الألوهية وأثر ضعف الملكة اللغوية في الإنكار على ما ليس حقه الإنكار",
+        "date": "2025",
+        "author": "د. عبد الله اللغوي"
       },
       "issue3": {
-      "title": "دلائل النبوة ومعركة الزلاقة",
-      "description": "تحليل دلائل النبوة، مع الرد على الروايات المستشرقين والشبهات، بما في ذلك معركة الزلاقة",
-      "date": "2025",
-      "author": "مجلس الدراسات التاريخية"
+        "title": "دلائل النبوة ومعركة الزلاقة",
+        "description": "تحليل دلائل النبوة، مع الرد على الروايات المستشرقين والشبهات، بما في ذلك معركة الزلاقة",
+        "date": "2025",
+        "author": "مجلس الدراسات التاريخية"
       },
       "issue4": {
         "title": "جوامع أدعية النبي وتعوذاته",
@@ -82,7 +85,7 @@
     },
     "categoryNames": {
       "aqeedah": "العقيدة",
-      "fiqh": "الفقه", 
+      "fiqh": "الفقه",
       "prophetBiography": "السيرة النبوية",
       "islamicHistory": "التاريخ الإسلامي"
     }
@@ -177,7 +180,8 @@
       "howToPray": "كيف تصلي",
       "supplications": "أدعية من القرآن والسنة"
     }
-  },  "contact": {
+  },
+  "contact": {
     "title": "اتصل بنا",
     "description": "نحن نحب أن نسمع منك. أرسل لنا رسالة أو تواصل معنا مباشرة.",
     "name": "الاسم",
@@ -200,7 +204,8 @@
     "formTitle": "نموذج الاتصال",
     "thankYou": "شكراً لك على رسالتك! سنعود إليك قريباً.",
     "sendAnother": "إرسال رسالة أخرى"
-  },  "footer": {
+  },
+  "footer": {
     "rightsReserved": "© 2025 حُراس الثغور. جميع الحقوق محفوظة.",
     "terms": "الشروط والأحكام",
     "privacy": "سياسة الخصوصية",
@@ -214,7 +219,8 @@
     "logoDescription": "منصة دعوية تسعى لنشر المعرفة الصحيحة عن الإسلام",
     "madeWith": "صُنع بكل حب",
     "by": "بواسطة"
-  },  "notFound": {
+  },
+  "notFound": {
     "title": "لم يتم العثور على الملف",
     "message": "ملف PDF الذي تبحث عنه غير موجود أو تم نقله.",
     "backToLibrary": "العودة إلى المكتبة",
@@ -225,7 +231,8 @@
     "pageNotAvailable": "الصفحة غير متاحة",
     "selectPDF": "يرجى تحديد ملف PDF لعرضه من صفحة المكتبة.",
     "goToHome": "الذهاب إلى الصفحة الرئيسية"
-  },  "errors": {
+  },
+  "errors": {
     "pdfNotFound": "لم يتم العثور على ملف PDF",
     "loadingError": "خطأ في تحميل المحتوى",
     "networkError": "خطأ في الاتصال بالشبكة"
@@ -252,7 +259,7 @@
     },
     "difficultyArabic": {
       "beginner": "مبتدئ",
-      "intermediate": "متوسط", 
+      "intermediate": "متوسط",
       "advanced": "متقدم"
     },
     "breadcrumb": "مسار التنقل",
@@ -273,7 +280,8 @@
     "breadcrumbDawah": "الدعوة",
     "breadcrumbLibrary": "المكتبة",
     "breadcrumbMagazine": "المجلة"
-  },  "newsletter": {
+  },
+  "newsletter": {
     "subscribeTitle": "اشترك في النشرة الإخبارية",
     "subscribeDescription": "احصل على آخر الإصدارات والمقالات المميزة في بريدك الإلكتروني",
     "subscribe": "اشترك",
@@ -316,9 +324,10 @@
     "exploreSections": "استكشف أقسام مختلفة من المجلة وتصفح المحتوى حسب اهتماماتك",
     "browse": "تصفح",
     "issuesInCategory": "إصدارات في هذا التصنيف",
-    "issueWord": "الإصدارات",    "pageWord": "الصفحات",
+    "issueWord": "الإصدارات",
+    "pageWord": "الصفحات",
     "issues": "إصدارات",
-    "pages": "صفحات", 
+    "pages": "صفحات",
     "issuesOf": "إصدارات",
     "issueInThisCategory": "إصدار في هذا التصنيف",
     "issuesInThisCategory": "إصدارات في هذا التصنيف",
