Add_Article: Adding MultiLang to fields.
+ Move AddArticleForm to its file.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -205,6 +205,13 @@
     "thankYou": "شكراً لك على رسالتك! سنعود إليك قريباً.",
     "sendAnother": "إرسال رسالة أخرى"
   },
+  "articles": {
+    "addArticle": "إضافة مقال",
+    "author": "المؤلف",
+    "title": "العنوان",
+    "excerpt": "نبذة",
+    "content": "المحتوى"
+  },
   "footer": {
     "rightsReserved": "© 2025 حُراس الثغور. جميع الحقوق محفوظة.",
     "terms": "الشروط والأحكام",
