--- a/locales/en.json
+++ b/locales/en.json
@@ -196,6 +196,13 @@
     "thankYou": "Thank you for your message! We will get back to you soon.",
     "sendAnother": "Send another message"
   },
+  "articles": {
+    "addArticle": "Add an Article",
+    "author": "Author",
+    "title": "Title",
+    "excerpt": "Excerpt",
+    "content": "Content"
+  },
   "footer": {
     "rightsReserved": "© 2025 Hurass Al-Thughur. All rights reserved.",
     "terms": "Terms and Conditions",
