Articles: Adding Translations.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -206,6 +206,9 @@
     "sendAnother": "إرسال رسالة أخرى"
   },
   "articles": {
+    "articles": "المقالات",
+    "articlesSectionDescription": "مقالات متنوعة حول موضوعات هامة.",
+    "viewArticle": "عرض المقال",
     "addArticle": "إضافة مقال",
     "author": "المؤلف",
     "title": "العنوان",
