Add_Article: Make SendButton multi lang.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -20,7 +20,8 @@
     "madeWith": "صُنع بكل حب",
     "by": "بواسطة",
     "goToLibrary": "الذهاب إلى المكتبة",
-    "siteName": "حُراس الثغور"
+    "siteName": "حُراس الثغور",
+    "send": "إرسال"
   },
   "home": {
     "title": "حُراس الثغور - الرئيسية",
