--- a/locales/en.json
+++ b/locales/en.json
@@ -20,7 +20,8 @@
     "madeWith": "Made with",
     "by": "by",
     "goToLibrary": "Go to Library",
-    "siteName": "Hurass Al-Thughur"
+    "siteName": "Hurass Al-Thughur",
+    "send": "Send"
   },
   "home": {
     "title": "Hurass Home",
