EditArticle: MultiLang Section Title.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -212,6 +212,7 @@
     "articleLang": "لغة المقال",
     "viewArticle": "عرض المقال",
     "addArticle": "إضافة مقال",
+    "editArticle": "تعديل المقال",
     "author": "المؤلف",
     "title": "العنوان",
     "excerpt": "نبذة",
