--- a/locales/en.json
+++ b/locales/en.json
@@ -203,6 +203,7 @@
     "articleLang": "Article Language",
     "viewArticle": "View Article",
     "addArticle": "Add an Article",
+    "editArticle": "Edit an Article",
     "author": "Author",
     "title": "Title",
     "excerpt": "Excerpt",
