Auth: Adding MultLang to the Signin.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -23,6 +23,18 @@
     "siteName": "حُراس الثغور",
     "send": "إرسال"
   },
+  "auth": {
+    "signin": "تسجيل الدخول",
+    "signout": "تسجيل الخروج",
+    "signup": "إنشاء حساب",
+    "password": "كلمة المرور",
+    "email": "البريد الإلكتروني",
+    "signinSuccess": "تم تسجيل الدخول بنجاح!",
+    "signoutSuccess": "تم تسجيل الخروج بنجاح!",
+    "signupSuccess": "تم إنشاء الحساب بنجاح!",
+    "signinError": "خطأ في تسجيل الدخول. يرجى التحقق من البريد الإلكتروني وكلمة المرور.",
+    "signupError": "خطأ في إنشاء الحساب. يرجى التحقق من البيانات المدخلة."
+  },
   "home": {
     "title": "حُراس الثغور - الرئيسية",
     "description": "منصة حُراس الثغور لتعزيز الدعوة الإسلامية",
