Auth: Add name in locales.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -27,6 +27,7 @@
     "signin": "تسجيل الدخول",
     "signout": "تسجيل الخروج",
     "signup": "إنشاء حساب",
+    "name": "الاسم",
     "password": "كلمة المرور",
     "email": "البريد الإلكتروني",
     "signinSuccess": "تم تسجيل الدخول بنجاح!",
