--- a/locales/en.json
+++ b/locales/en.json
@@ -27,6 +27,7 @@
     "signin": "Sign In",
     "signout": "Sign Out",
     "signup": "Sign Up",
+    "name": "Name",
     "password": "Password",
     "email": "Email",
     "signinSuccess": "Login successful!",
