ArticlesPage: Add "AddNewArticle" Link.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -225,6 +225,7 @@
     "articleLang": "لغة المقال",
     "viewArticle": "عرض المقال",
     "addArticle": "إضافة مقال",
+    "addNewArticle": "إضافة مقال جديد",
     "editArticle": "تعديل المقال",
     "author": "المؤلف",
     "title": "العنوان",
