--- a/locales/en.json
+++ b/locales/en.json
@@ -216,6 +216,7 @@
     "articleLang": "Article Language",
     "viewArticle": "View Article",
     "addArticle": "Add an Article",
+    "addNewArticle": "Add New Article",
     "editArticle": "Edit an Article",
     "author": "Author",
     "title": "Title",
