Add authentication buttons and links to Sign In/Sign Up in header and forms

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -20,8 +20,7 @@
     "madeWith": "صُنع بكل حب",
     "by": "بواسطة",
     "goToLibrary": "الذهاب إلى المكتبة",
-    "siteName": "حُراس الثغور",
-    "send": "إرسال"
+    "siteName": "حُراس الثغور",    "send": "إرسال"
   },
   "auth": {
     "signin": "تسجيل الدخول",
@@ -34,7 +33,9 @@
     "signoutSuccess": "تم تسجيل الخروج بنجاح!",
     "signupSuccess": "تم إنشاء الحساب بنجاح!",
     "signinError": "خطأ في تسجيل الدخول. يرجى التحقق من البريد الإلكتروني وكلمة المرور.",
-    "signupError": "خطأ في إنشاء الحساب. يرجى التحقق من البيانات المدخلة."
+    "signupError": "خطأ في إنشاء الحساب. يرجى التحقق من البيانات المدخلة.",
+    "dontHaveAccount": "ليس لديك حساب؟",
+    "alreadyHaveAccount": "لديك حساب بالفعل؟"
   },
   "home": {
     "title": "حُراس الثغور - الرئيسية",
